VS: Fix access violation when calling Visual Studio macro

Fixes: #19730